--- a/style.css
+++ b/style.css
@@ -1,3 +1,39 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+
+@layer components{
+  .links{
+       @apply text-dim-colorGray hover:text-black ;
+    }
+    .links-border{
+        @apply  hover:border-b-2 border-black pb-4 transition-all duration-100 ;
+
+
+    }
+}
+
+
+@font-face{
+    font-family:'My-Custom-Font1';
+    src:url('./fonts/Work_Sans/static/WorkSans-Black.ttf') format('truetype');
+}
+@font-face{
+    font-family:'My-Custom-Font2';
+    src:url('./fonts/Work_Sans/static/WorkSans-Medium.ttf') format('truetype');
+}
+@font-face{
+    font-family:'My-Custom-Font3';
+    src:url('./fonts/Work_Sans/static/WorkSans-Bold.ttf') format('truetype');
+}
+@font-face{
+    font-family:'My-Custom-Font4';
+    src:url('./fonts/Work_Sans/static/WorkSans-SemiBold.ttf') format('truetype');
+}
+
+
+
+
