--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
        @apply text-dim-colorGray hover:text-black ;
     }
     .links-border{
-        @apply  hover:border-b-2 border-black pb-4 transition-all duration-100 ;
+        @apply  hover:border-b-2 border-black pb-4  ;
 
 
     }
