--- a/output.css
+++ b/output.css
@@ -608,6 +608,22 @@ video {
   border-bottom-width: 2px;
 }
 
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
+
+.absolute {
+  position: absolute;
+}
+
 .relative {
   position: relative;
 }
@@ -624,84 +640,53 @@ video {
   left: 4rem;
 }
 
-.top-14 {
-  top: 3.5rem;
+.top-2\/3 {
+  top: 66.666667%;
 }
 
 .top-20 {
   top: 5rem;
 }
 
-.top-40 {
-  top: 10rem;
-}
-
-.top-36 {
-  top: 9rem;
-}
-
-.top-32 {
-  top: 8rem;
-}
-
-.top-24 {
-  top: 6rem;
-}
-
-.left-24 {
-  left: 6rem;
-}
-
-.left-2\/4 {
-  left: 50%;
-}
-
-.top-11 {
-  top: 2.75rem;
-}
-
-.top-\[28\%\] {
-  top: 28%;
-}
-
-.top-\[50\%\] {
-  top: 50%;
-}
-
-.top-\[65\%\] {
-  top: 65%;
-}
-
-.top-\[62\%\] {
-  top: 62%;
-}
-
-.top-\[6\%\] {
-  top: 6%;
-}
-
-.top-80 {
-  top: 20rem;
-}
-
-.top-72 {
-  top: 18rem;
-}
-
 .top-64 {
   top: 16rem;
 }
 
-.top-2\/4 {
-  top: 50%;
+.top-\[19\.5px\] {
+  top: 19.5px;
 }
 
-.top-3\/4 {
-  top: 75%;
+.top-\[20\.5px\] {
+  top: 20.5px;
 }
 
-.top-2\/3 {
-  top: 66.666667%;
+.top-\[25\.5px\] {
+  top: 25.5px;
+}
+
+.top-\[29\.5px\] {
+  top: 29.5px;
+}
+
+.top-\[29px\] {
+  top: 29px;
+}
+
+.top-\[30px\] {
+  top: 30px;
+}
+
+.top-\[40px\] {
+  top: 40px;
+}
+
+.top-\[45px\] {
+  top: 45px;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .mb-14 {
@@ -724,8 +709,20 @@ video {
   margin-left: 0.75rem;
 }
 
+.ml-52 {
+  margin-left: 13rem;
+}
+
 .ml-7 {
   margin-left: 1.75rem;
+}
+
+.ml-\[34\.89\%\] {
+  margin-left: 34.89%;
+}
+
+.ml-\[36\%\] {
+  margin-left: 36%;
 }
 
 .mr-3 {
@@ -744,128 +741,62 @@ video {
   margin-top: 20rem;
 }
 
-.mt-7 {
-  margin-top: 1.75rem;
+.ml-\[35\.89\%\] {
+  margin-left: 35.89%;
 }
 
-.mt-2 {
-  margin-top: 0.5rem;
+.mt-12 {
+  margin-top: 3rem;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
-.mt-5 {
-  margin-top: 1.25rem;
+.mt-16 {
+  margin-top: 4rem;
 }
 
-.mr-32 {
-  margin-right: 8rem;
+.mt-4 {
+  margin-top: 1rem;
 }
 
-.ml-32 {
-  margin-left: 8rem;
-}
-
-.ml-64 {
-  margin-left: 16rem;
-}
-
-.ml-96 {
-  margin-left: 24rem;
-}
-
-.ml-\[95\] {
-  margin-left: 95;
-}
-
-.ml-\[95px\] {
-  margin-left: 95px;
-}
-
-.ml-\[95\%\] {
-  margin-left: 95%;
-}
-
-.ml-\[20\%\] {
-  margin-left: 20%;
-}
-
-.ml-\[50\%\] {
-  margin-left: 50%;
-}
-
-.ml-\[40\%\] {
-  margin-left: 40%;
-}
-
-.ml-\[35\%\] {
-  margin-left: 35%;
-}
-
-.ml-\[34\.89\%\] {
-  margin-left: 34.89%;
-}
-
-.mb-7 {
-  margin-bottom: 1.75rem;
-}
-
-.ml-48 {
-  margin-left: 12rem;
-}
-
-.mr-48 {
-  margin-right: 12rem;
-}
-
-.mb-80 {
-  margin-bottom: 20rem;
-}
-
-.mt-9 {
-  margin-top: 2.25rem;
-}
-
-.ml-\[36\%\] {
-  margin-left: 36%;
-}
-
-.ml-\[3\%\] {
-  margin-left: 3%;
-}
-
-.ml-\[25\%\] {
-  margin-left: 25%;
-}
-
-.ml-44 {
-  margin-left: 11rem;
-}
-
-.ml-4 {
-  margin-left: 1rem;
-}
-
-.ml-52 {
-  margin-left: 13rem;
-}
-
-.mt-\[50\%\] {
-  margin-top: 50%;
-}
-
-.mt-10 {
-  margin-top: 2.5rem;
+.block {
+  display: block;
 }
 
 .flex {
   display: flex;
 }
 
+.inline-flex {
+  display: inline-flex;
+}
+
+.grid {
+  display: grid;
+}
+
+.size-6 {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.size-2 {
+  width: 0.5rem;
+  height: 0.5rem;
+}
+
 .h-screen {
   height: 100vh;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .w-2\/3 {
@@ -884,8 +815,47 @@ video {
   width: 15rem;
 }
 
+.w-full {
+  width: 100%;
+}
+
+.max-w-5xl {
+  max-width: 64rem;
+}
+
+.max-w-md {
+  max-width: 28rem;
+}
+
+.max-w-screen-xl {
+  max-width: 1280px;
+}
+
+@keyframes ping {
+  75%, 100% {
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+
+.animate-ping {
+  animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 .justify-between {
@@ -896,8 +866,38 @@ video {
   gap: 1.25rem;
 }
 
+.gap-6 {
+  gap: 1.5rem;
+}
+
+.gap-1\.5 {
+  gap: 0.375rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
+.gap-8 {
+  gap: 2rem;
+}
+
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .border {
   border-width: 1px;
+}
+
+.border-t {
+  border-top-width: 1px;
 }
 
 .border-black {
@@ -910,12 +910,62 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
 }
 
-.bg-navBackground {
-  background-image: url('/images/backgroundImage-coveNav.png');
+.border-gray-100 {
+  --tw-border-opacity: 1;
+  border-color: rgb(243 244 246 / var(--tw-border-opacity, 1));
+}
+
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity, 1));
+}
+
+.border-gray-50 {
+  --tw-border-opacity: 1;
+  border-color: rgb(249 250 251 / var(--tw-border-opacity, 1));
+}
+
+.border-orange-900 {
+  --tw-border-opacity: 1;
+  border-color: rgb(124 45 18 / var(--tw-border-opacity, 1));
+}
+
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
+}
+
+.bg-indigo-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(99 102 241 / var(--tw-bg-opacity, 1));
+}
+
+.bg-teal-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(45 212 191 / var(--tw-bg-opacity, 1));
+}
+
+.bg-teal-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(20 184 166 / var(--tw-bg-opacity, 1));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-dim-colorGray {
+  --tw-bg-opacity: 1;
+  background-color: rgb(237 232 208 / var(--tw-bg-opacity, 1));
 }
 
 .bg-BeDiffrentBg {
   background-image: url('/images/360_F_611673746_sOmwqM334PXbw8Ptn7S3QNjcRoMVp8lZ.jpg');
+}
+
+.bg-navBackground {
+  background-image: url('/images/backgroundImage-coveNav.png');
 }
 
 .bg-cover {
@@ -928,6 +978,31 @@ video {
 
 .p-5 {
   padding: 1.25rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .pl-64 {
@@ -954,36 +1029,16 @@ video {
   padding-top: 1.25rem;
 }
 
-.pl-80 {
-  padding-left: 20rem;
+.pb-6 {
+  padding-bottom: 1.5rem;
 }
 
-.pl-60 {
-  padding-left: 15rem;
+.pt-16 {
+  padding-top: 4rem;
 }
 
-.pl-56 {
-  padding-left: 14rem;
-}
-
-.pl-6 {
-  padding-left: 1.5rem;
-}
-
-.pr-6 {
-  padding-right: 1.5rem;
-}
-
-.pl-10 {
-  padding-left: 2.5rem;
-}
-
-.pl-20 {
-  padding-left: 5rem;
-}
-
-.pl-32 {
-  padding-left: 8rem;
+.pt-6 {
+  padding-top: 1.5rem;
 }
 
 .text-center {
@@ -1002,9 +1057,9 @@ video {
   font-family: My-Custom-Font4;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .text-7xl {
@@ -1022,13 +1077,16 @@ video {
   line-height: 1.25rem;
 }
 
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
-
 .font-medium {
   font-weight: 500;
+}
+
+.font-semibold {
+  font-weight: 600;
+}
+
+.leading-relaxed {
+  line-height: 1.625;
 }
 
 .text-dim-colorGray {
@@ -1044,6 +1102,54 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity, 1));
+}
+
+.text-teal-600 {
+  --tw-text-opacity: 1;
+  color: rgb(13 148 136 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity, 1));
+}
+
+.text-teal-700 {
+  --tw-text-opacity: 1;
+  color: rgb(15 118 110 / var(--tw-text-opacity, 1));
+}
+
+.text-orange-900 {
+  --tw-text-opacity: 1;
+  color: rgb(124 45 18 / var(--tw-text-opacity, 1));
+}
+
+.opacity-75 {
+  opacity: 0.75;
+}
+
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 .duration-500 {
@@ -1084,9 +1190,140 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:bg-indigo-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(79 70 229 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.hover\:text-gray-700\/75:hover {
+  color: rgb(55 65 81 / 0.75);
+}
+
+.hover\:text-teal-700\/75:hover {
+  color: rgb(15 118 110 / 0.75);
+}
+
+.group:hover .group-hover\:text-gray-700\/75 {
+  color: rgb(55 65 81 / 0.75);
+}
+
+@media (min-width: 640px) {
+  .sm\:ms-0 {
+    margin-inline-start: 0px;
+  }
+
+  .sm\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .sm\:flex {
+    display: flex;
+  }
+
+  .sm\:flex-row {
+    flex-direction: row;
+  }
+
+  .sm\:items-center {
+    align-items: center;
+  }
+
+  .sm\:justify-start {
+    justify-content: flex-start;
+  }
+
+  .sm\:justify-between {
+    justify-content: space-between;
+  }
+
+  .sm\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .sm\:text-left {
+    text-align: left;
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:col-span-4 {
+    grid-column: span 4 / span 4;
+  }
+
+  .md\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .md\:gap-8 {
+    gap: 2rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:col-span-2 {
+    grid-column: span 2 / span 2;
+  }
+
+  .lg\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .lg\:flex {
+    display: flex;
+  }
+
+  .lg\:grid-cols-6 {
+    grid-template-columns: repeat(6, minmax(0, 1fr));
+  }
+
+  .lg\:flex-col {
+    flex-direction: column;
+  }
+
+  .lg\:items-start {
+    align-items: flex-start;
+  }
+
+  .lg\:items-center {
+    align-items: center;
+  }
+
+  .lg\:justify-between {
+    justify-content: space-between;
+  }
+
+  .lg\:gap-12 {
+    gap: 3rem;
+  }
+
+  .lg\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+
+@media (min-width: 640px) {
+  .ltr\:sm\:justify-start:where([dir="ltr"], [dir="ltr"] *) {
+    justify-content: flex-start;
+  }
+
+  .ltr\:sm\:text-left:where([dir="ltr"], [dir="ltr"] *) {
+    text-align: left;
+  }
+
+  .rtl\:sm\:justify-end:where([dir="rtl"], [dir="rtl"] *) {
+    justify-content: flex-end;
+  }
+
+  .rtl\:sm\:text-right:where([dir="rtl"], [dir="rtl"] *) {
+    text-align: right;
+  }
 }
 
 
