--- a/style.css
+++ b/style.css
@@ -3,19 +3,20 @@
 @tailwind utilities;
 
 
-
-
 @layer components{
   .links{
        @apply text-dim-colorGray hover:text-black ;
     }
     .links-border{
         @apply  hover:border-b-2 border-black pb-4  ;
-
+ 
 
     }
+    .nav-hidden{
+        @apply hidden md:block;
+    }
+   
 }
-
 
 @font-face{
     font-family:'My-Custom-Font1';
