--- a/output.css
+++ b/output.css
@@ -801,6 +801,46 @@ video {
   margin-bottom: 1.25rem;
 }
 
+.ml-\[50\%\] {
+  margin-left: 50%;
+}
+
+.ml-\[25\%\] {
+  margin-left: 25%;
+}
+
+.ml-\[20\%\] {
+  margin-left: 20%;
+}
+
+.mt-\[-20\%\] {
+  margin-top: -20%;
+}
+
+.mt-\[-40\%\] {
+  margin-top: -40%;
+}
+
+.mt-\[-50\%\] {
+  margin-top: -50%;
+}
+
+.mt-\[-45\%\] {
+  margin-top: -45%;
+}
+
+.mt-\[-35\%\] {
+  margin-top: -35%;
+}
+
+.ml-\[30\%\] {
+  margin-left: 30%;
+}
+
+.ml-\[10\%\] {
+  margin-left: 10%;
+}
+
 .block {
   display: block;
 }
@@ -858,6 +898,26 @@ video {
   height: 0px;
 }
 
+.h-\[40\%\] {
+  height: 40%;
+}
+
+.h-\[80\%\] {
+  height: 80%;
+}
+
+.h-\[100\%\] {
+  height: 100%;
+}
+
+.h-\[70\%\] {
+  height: 70%;
+}
+
+.h-\[55\%\] {
+  height: 55%;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -906,12 +966,104 @@ video {
   width: 20%;
 }
 
+.w-\[40\%\] {
+  width: 40%;
+}
+
+.w-\[25\%\] {
+  width: 25%;
+}
+
+.w-\[30\%\] {
+  width: 30%;
+}
+
+.w-16 {
+  width: 4rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-80 {
+  width: 20rem;
+}
+
+.w-\[80px\] {
+  width: 80px;
+}
+
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-\[450px\] {
+  width: 450px;
+}
+
+.w-\[400px\] {
+  width: 400px;
+}
+
+.w-\[410px\] {
+  width: 410px;
+}
+
+.w-\[415px\] {
+  width: 415px;
+}
+
+.w-\[405px\] {
+  width: 405px;
+}
+
+.w-\[402px\] {
+  width: 402px;
+}
+
+.w-\[390px\] {
+  width: 390px;
+}
+
+.w-\[380px\] {
+  width: 380px;
+}
+
+.w-12 {
+  width: 3rem;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
+.w-28 {
+  width: 7rem;
+}
+
+.w-36 {
+  width: 9rem;
+}
+
+.w-\[70\%\] {
+  width: 70%;
+}
+
+.w-\[60\%\] {
+  width: 60%;
+}
+
 .max-w-md {
   max-width: 28rem;
 }
 
 .max-w-screen-xl {
   max-width: 1280px;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .grid-cols-1 {
@@ -1092,6 +1244,14 @@ video {
   padding: 2rem;
 }
 
+.p-2 {
+  padding: 0.5rem;
+}
+
+.p-20 {
+  padding: 5rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1148,6 +1308,26 @@ video {
 
 .pt-6 {
   padding-top: 1.5rem;
+}
+
+.pt-20 {
+  padding-top: 5rem;
+}
+
+.pt-24 {
+  padding-top: 6rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pt-36 {
+  padding-top: 9rem;
+}
+
+.text-left {
+  text-align: left;
 }
 
 .text-center {
@@ -1409,6 +1589,18 @@ video {
     margin-left: 0px;
   }
 
+  .sm\:ml-\[20\%\] {
+    margin-left: 20%;
+  }
+
+  .sm\:mt-\[50\%\] {
+    margin-top: 50%;
+  }
+
+  .sm\:ml-\[10\%\] {
+    margin-left: 10%;
+  }
+
   .sm\:flex {
     display: flex;
   }
@@ -1423,6 +1615,42 @@ video {
 
   .sm\:h-\[50\%\] {
     height: 50%;
+  }
+
+  .sm\:h-\[90\%\] {
+    height: 90%;
+  }
+
+  .sm\:h-\[75\%\] {
+    height: 75%;
+  }
+
+  .sm\:h-\[80\%\] {
+    height: 80%;
+  }
+
+  .sm\:h-\[65\%\] {
+    height: 65%;
+  }
+
+  .sm\:h-\[30\%\] {
+    height: 30%;
+  }
+
+  .sm\:h-\[35\%\] {
+    height: 35%;
+  }
+
+  .sm\:h-\[40\%\] {
+    height: 40%;
+  }
+
+  .sm\:h-\[45\%\] {
+    height: 45%;
+  }
+
+  .sm\:h-\[100\%\] {
+    height: 100%;
   }
 
   .sm\:w-\[70\%\] {
@@ -1447,6 +1675,22 @@ video {
 
   .sm\:w-\[95\%\] {
     width: 95%;
+  }
+
+  .sm\:w-\[100\%\] {
+    width: 100%;
+  }
+
+  .sm\:w-\[85\%\] {
+    width: 85%;
+  }
+
+  .sm\:w-\[40\%\] {
+    width: 40%;
+  }
+
+  .sm\:w-\[75\%\] {
+    width: 75%;
   }
 
   .sm\:grid-cols-2 {
