--- a/output.css
+++ b/output.css
@@ -598,6 +598,19 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity, 1));
 }
 
+@media (min-width: 640px) {
+  .links {
+    padding-left: 2rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .links {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+}
+
 .links-border {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
@@ -606,6 +619,20 @@ video {
 
 .links-border:hover {
   border-bottom-width: 2px;
+}
+
+.nav-hidden {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .nav-hidden {
+    display: block;
+  }
+}
+
+.bg-navBackground {
+  background-size: cover;
 }
 
 .sr-only {
@@ -624,40 +651,148 @@ video {
   position: relative;
 }
 
-.left-16 {
-  left: 4rem;
+.bottom-5 {
+  bottom: 1.25rem;
 }
 
-.top-2\/3 {
-  top: 66.666667%;
+.left-2 {
+  left: 0.5rem;
 }
 
-.top-64 {
-  top: 16rem;
+.left-8 {
+  left: 2rem;
 }
 
-.top-\[45px\] {
-  top: 45px;
+.top-10 {
+  top: 2.5rem;
 }
 
-.m-auto {
-  margin: auto;
+.top-32 {
+  top: 8rem;
 }
 
-.m-9 {
-  margin: 2.25rem;
+.top-5 {
+  top: 1.25rem;
+}
+
+.top-20 {
+  top: 5rem;
+}
+
+.top-2 {
+  top: 0.5rem;
+}
+
+.top-\[-15px\] {
+  top: -15px;
+}
+
+.top-\[-25px\] {
+  top: -25px;
+}
+
+.top-\[-50px\] {
+  top: -50px;
+}
+
+.top-\[0px\] {
+  top: 0px;
+}
+
+.top-\[-80px\] {
+  top: -80px;
+}
+
+.top-\[-100px\] {
+  top: -100px;
+}
+
+.top-\[-10px\] {
+  top: -10px;
+}
+
+.top-11 {
+  top: 2.75rem;
+}
+
+.top-56 {
+  top: 14rem;
+}
+
+.top-48 {
+  top: 12rem;
+}
+
+.left-12 {
+  left: 3rem;
+}
+
+.left-28 {
+  left: 7rem;
+}
+
+.left-36 {
+  left: 9rem;
+}
+
+.left-52 {
+  left: 13rem;
+}
+
+.top-44 {
+  top: 11rem;
+}
+
+.left-48 {
+  left: 12rem;
+}
+
+.right-40 {
+  right: 10rem;
+}
+
+.right-48 {
+  right: 12rem;
+}
+
+.top-12 {
+  top: 3rem;
+}
+
+.top-24 {
+  top: 6rem;
+}
+
+.top-36 {
+  top: 9rem;
+}
+
+.left-10 {
+  left: 2.5rem;
+}
+
+.left-5 {
+  left: 1.25rem;
+}
+
+.top-8 {
+  top: 2rem;
+}
+
+.top-3 {
+  top: 0.75rem;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.col-start-3 {
+  grid-column-start: 3;
 }
 
 .m-2 {
   margin: 0.5rem;
-}
-
-.m-0 {
-  margin: 0px;
-}
-
-.m-4 {
-  margin: 1rem;
 }
 
 .m-3 {
@@ -669,6 +804,10 @@ video {
   margin-right: auto;
 }
 
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
 .mb-14 {
   margin-bottom: 3.5rem;
 }
@@ -677,48 +816,28 @@ video {
   margin-bottom: 0.5rem;
 }
 
-.ml-14 {
-  margin-left: 3.5rem;
+.mb-6 {
+  margin-bottom: 1.5rem;
 }
 
 .ml-2 {
   margin-left: 0.5rem;
 }
 
-.ml-20 {
-  margin-left: 5rem;
-}
-
-.ml-24 {
-  margin-left: 6rem;
-}
-
 .ml-3 {
   margin-left: 0.75rem;
 }
 
-.ml-44 {
-  margin-left: 11rem;
+.ml-5 {
+  margin-left: 1.25rem;
 }
 
-.ml-52 {
-  margin-left: 13rem;
+.ml-\[20\%\] {
+  margin-left: 20%;
 }
 
-.ml-6 {
-  margin-left: 1.5rem;
-}
-
-.ml-\[34\.89\%\] {
-  margin-left: 34.89%;
-}
-
-.ml-\[36\%\] {
-  margin-left: 36%;
-}
-
-.mr-3 {
-  margin-right: 0.75rem;
+.ml-\[30\%\] {
+  margin-left: 30%;
 }
 
 .mt-10 {
@@ -729,116 +848,28 @@ video {
   margin-top: 4rem;
 }
 
-.mt-2 {
-  margin-top: 0.5rem;
+.mt-3 {
+  margin-top: 0.75rem;
 }
 
 .mt-4 {
   margin-top: 1rem;
 }
 
-.mt-40 {
-  margin-top: 10rem;
-}
-
-.mt-44 {
-  margin-top: 11rem;
-}
-
-.mt-6 {
-  margin-top: 1.5rem;
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
 .mt-8 {
   margin-top: 2rem;
 }
 
-.ml-auto {
-  margin-left: auto;
-}
-
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
-.mt-9 {
-  margin-top: 2.25rem;
-}
-
-.mb-6 {
-  margin-bottom: 1.5rem;
-}
-
-.ml-4 {
-  margin-left: 1rem;
-}
-
-.ml-5 {
-  margin-left: 1.25rem;
-}
-
-.mb-20 {
-  margin-bottom: 5rem;
-}
-
-.ml-1 {
-  margin-left: 0.25rem;
-}
-
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
-
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
-
-.ml-\[50\%\] {
-  margin-left: 50%;
-}
-
-.ml-\[25\%\] {
-  margin-left: 25%;
-}
-
-.ml-\[20\%\] {
-  margin-left: 20%;
-}
-
-.mt-\[-20\%\] {
-  margin-top: -20%;
-}
-
-.mt-\[-40\%\] {
-  margin-top: -40%;
-}
-
-.mt-\[-50\%\] {
-  margin-top: -50%;
-}
-
-.mt-\[-45\%\] {
-  margin-top: -45%;
-}
-
 .mt-\[-35\%\] {
   margin-top: -35%;
 }
 
-.ml-\[30\%\] {
-  margin-left: 30%;
-}
-
-.ml-\[10\%\] {
-  margin-left: 10%;
+.mt-1 {
+  margin-top: 0.25rem;
 }
 
 .block {
@@ -857,201 +888,65 @@ video {
   display: grid;
 }
 
-.hidden {
-  display: none;
-}
-
 .size-6 {
   width: 1.5rem;
   height: 1.5rem;
-}
-
-.h-96 {
-  height: 24rem;
-}
-
-.h-screen {
-  height: 100vh;
-}
-
-.h-auto {
-  height: auto;
-}
-
-.h-20 {
-  height: 5rem;
-}
-
-.h-44 {
-  height: 11rem;
-}
-
-.h-80 {
-  height: 20rem;
-}
-
-.h-\[50\%\] {
-  height: 50%;
-}
-
-.h-0 {
-  height: 0px;
-}
-
-.h-\[40\%\] {
-  height: 40%;
-}
-
-.h-\[80\%\] {
-  height: 80%;
 }
 
 .h-\[100\%\] {
   height: 100%;
 }
 
-.h-\[70\%\] {
-  height: 70%;
+.h-\[50\%\] {
+  height: 50%;
 }
 
 .h-\[55\%\] {
   height: 55%;
 }
 
-.min-h-screen {
-  min-height: 100vh;
+.w-36 {
+  width: 9rem;
 }
 
-.w-2\/3 {
-  width: 66.666667%;
+.w-40 {
+  width: 10rem;
 }
 
-.w-3\/5 {
-  width: 60%;
-}
-
-.w-3\/6 {
-  width: 50%;
-}
-
-.w-4\/5 {
-  width: 80%;
-}
-
-.w-60 {
-  width: 15rem;
-}
-
-.w-96 {
-  width: 24rem;
-}
-
-.w-full {
-  width: 100%;
-}
-
-.w-auto {
-  width: auto;
+.w-64 {
+  width: 16rem;
 }
 
 .w-\[100\%\] {
   width: 100%;
 }
 
-.w-\[50\%\] {
-  width: 50%;
-}
-
-.w-\[20\%\] {
-  width: 20%;
-}
-
-.w-\[40\%\] {
-  width: 40%;
-}
-
-.w-\[25\%\] {
-  width: 25%;
-}
-
-.w-\[30\%\] {
-  width: 30%;
-}
-
-.w-16 {
-  width: 4rem;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-80 {
-  width: 20rem;
-}
-
-.w-\[80px\] {
-  width: 80px;
-}
-
-.w-\[200px\] {
-  width: 200px;
-}
-
-.w-\[450px\] {
-  width: 450px;
-}
-
-.w-\[400px\] {
-  width: 400px;
-}
-
-.w-\[410px\] {
-  width: 410px;
-}
-
-.w-\[415px\] {
-  width: 415px;
-}
-
-.w-\[405px\] {
-  width: 405px;
-}
-
-.w-\[402px\] {
-  width: 402px;
-}
-
-.w-\[390px\] {
-  width: 390px;
-}
-
 .w-\[380px\] {
   width: 380px;
 }
 
-.w-12 {
-  width: 3rem;
-}
-
-.w-24 {
-  width: 6rem;
-}
-
-.w-28 {
-  width: 7rem;
-}
-
-.w-36 {
-  width: 9rem;
-}
-
-.w-\[70\%\] {
-  width: 70%;
-}
-
 .w-\[60\%\] {
   width: 60%;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.w-14 {
+  width: 3.5rem;
+}
+
+.w-48 {
+  width: 12rem;
+}
+
+.w-52 {
+  width: 13rem;
+}
+
+.w-56 {
+  width: 14rem;
 }
 
 .max-w-md {
@@ -1074,44 +969,16 @@ video {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
-.flex-row {
-  flex-direction: row;
-}
-
 .flex-col {
   flex-direction: column;
-}
-
-.content-center {
-  align-content: center;
-}
-
-.content-start {
-  align-content: flex-start;
-}
-
-.items-start {
-  align-items: flex-start;
-}
-
-.items-end {
-  align-items: flex-end;
-}
-
-.items-center {
-  align-items: center;
-}
-
-.items-stretch {
-  align-items: stretch;
 }
 
 .justify-center {
   justify-content: center;
 }
 
-.justify-between {
-  justify-content: space-between;
+.gap-0 {
+  gap: 0px;
 }
 
 .gap-4 {
@@ -1130,30 +997,10 @@ video {
   gap: 2rem;
 }
 
-.gap-0 {
-  gap: 0px;
-}
-
-.gap-3 {
-  gap: 0.75rem;
-}
-
-.gap-2 {
-  gap: 0.5rem;
-}
-
-.gap-10 {
-  gap: 2.5rem;
-}
-
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}
-
-.overflow-hidden {
-  overflow: hidden;
 }
 
 .overflow-x-hidden {
@@ -1181,11 +1028,6 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
 }
 
-.border-gray-100 {
-  --tw-border-opacity: 1;
-  border-color: rgb(243 244 246 / var(--tw-border-opacity, 1));
-}
-
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity, 1));
@@ -1194,11 +1036,6 @@ video {
 .border-orange-900 {
   --tw-border-opacity: 1;
   border-color: rgb(124 45 18 / var(--tw-border-opacity, 1));
-}
-
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
 }
 
 .bg-dim-colorGray {
@@ -1211,45 +1048,16 @@ video {
   background-color: rgb(194 65 12 / var(--tw-bg-opacity, 1));
 }
 
-.bg-slate-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(203 213 225 / var(--tw-bg-opacity, 1));
-}
-
-.bg-BeDiffrentBg {
-  background-image: url('/images/360_F_611673746_sOmwqM334PXbw8Ptn7S3QNjcRoMVp8lZ.jpg');
-}
-
 .bg-navBackground {
   background-image: url('/images/backgroundImage-coveNav.png');
 }
 
-.bg-cover {
-  background-size: cover;
-}
-
-.bg-center {
-  background-position: center;
-}
-
-.p-14 {
-  padding: 3.5rem;
-}
-
-.p-5 {
-  padding: 1.25rem;
-}
-
-.p-0 {
-  padding: 0px;
+.p-1 {
+  padding: 0.25rem;
 }
 
 .p-12 {
   padding: 3rem;
-}
-
-.p-8 {
-  padding: 2rem;
 }
 
 .p-2 {
@@ -1258,6 +1066,10 @@ video {
 
 .p-20 {
   padding: 5rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .px-4 {
@@ -1280,14 +1092,8 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.py-12 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+.pb-20 {
+  padding-bottom: 5rem;
 }
 
 .pb-5 {
@@ -1298,12 +1104,16 @@ video {
   padding-bottom: 1.5rem;
 }
 
-.pr-20 {
-  padding-right: 5rem;
+.pl-1 {
+  padding-left: 0.25rem;
 }
 
-.pt-12 {
-  padding-top: 3rem;
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
+.pr-20 {
+  padding-right: 5rem;
 }
 
 .pt-16 {
@@ -1318,22 +1128,6 @@ video {
   padding-top: 1.5rem;
 }
 
-.pt-20 {
-  padding-top: 5rem;
-}
-
-.pt-24 {
-  padding-top: 6rem;
-}
-
-.pt-2 {
-  padding-top: 0.5rem;
-}
-
-.pt-36 {
-  padding-top: 9rem;
-}
-
 .text-left {
   text-align: left;
 }
@@ -1344,10 +1138,6 @@ video {
 
 .align-middle {
   vertical-align: middle;
-}
-
-.align-bottom {
-  vertical-align: bottom;
 }
 
 .font-custom2 {
@@ -1362,6 +1152,10 @@ video {
   font-family: My-Custom-Font4;
 }
 
+.font-sans {
+  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -1372,19 +1166,13 @@ video {
   line-height: 2.25rem;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
 }
 
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
+.text-\[8px\] {
+  font-size: 8px;
 }
 
 .text-base {
@@ -1407,14 +1195,14 @@ video {
   line-height: 1.75rem;
 }
 
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .font-bold {
@@ -1473,32 +1261,14 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.text-gray-300 {
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity, 1));
-}
-
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
-}
-
-.caret-gray-400 {
-  caret-color: #9ca3af;
-}
-
-.caret-gray-300 {
-  caret-color: #d1d5db;
-}
-
-.caret-gray-100 {
-  caret-color: #f3f4f6;
-}
-
 .shadow-sm {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.outline {
+  outline-style: solid;
 }
 
 .transition {
@@ -1543,11 +1313,6 @@ video {
   src:url('./fonts/Work_Sans/static/WorkSans-SemiBold.ttf') format('truetype');
 }
 
-.hover\:border-black:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
-}
-
 .hover\:bg-black:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
@@ -1573,8 +1338,80 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:m-0 {
-    margin: 0px;
+  .sm\:relative {
+    position: relative;
+  }
+
+  .sm\:left-0 {
+    left: 0px;
+  }
+
+  .sm\:left-12 {
+    left: 3rem;
+  }
+
+  .sm\:left-44 {
+    left: 11rem;
+  }
+
+  .sm\:left-5 {
+    left: 1.25rem;
+  }
+
+  .sm\:right-5 {
+    right: 1.25rem;
+  }
+
+  .sm\:top-14 {
+    top: 3.5rem;
+  }
+
+  .sm\:top-2 {
+    top: 0.5rem;
+  }
+
+  .sm\:top-64 {
+    top: 16rem;
+  }
+
+  .sm\:top-72 {
+    top: 18rem;
+  }
+
+  .sm\:top-\[-10px\] {
+    top: -10px;
+  }
+
+  .sm\:top-\[-20px\] {
+    top: -20px;
+  }
+
+  .sm\:top-\[268px\] {
+    top: 268px;
+  }
+
+  .sm\:col-start-4 {
+    grid-column-start: 4;
+  }
+
+  .sm\:mb-10 {
+    margin-bottom: 2.5rem;
+  }
+
+  .sm\:ml-0 {
+    margin-left: 0px;
+  }
+
+  .sm\:ml-\[10\%\] {
+    margin-left: 10%;
+  }
+
+  .sm\:ml-\[20\%\] {
+    margin-left: 20%;
+  }
+
+  .sm\:ml-\[40\%\] {
+    margin-left: 40%;
   }
 
   .sm\:ms-0 {
@@ -1585,96 +1422,52 @@ video {
     margin-top: 0px;
   }
 
-  .sm\:mt-48 {
-    margin-top: 12rem;
+  .sm\:mt-20 {
+    margin-top: 5rem;
   }
 
-  .sm\:ml-2 {
-    margin-left: 0.5rem;
-  }
-
-  .sm\:ml-0 {
-    margin-left: 0px;
-  }
-
-  .sm\:ml-\[20\%\] {
-    margin-left: 20%;
-  }
-
-  .sm\:mt-\[50\%\] {
-    margin-top: 50%;
-  }
-
-  .sm\:ml-\[10\%\] {
-    margin-left: 10%;
+  .sm\:mt-\[10\%\] {
+    margin-top: 10%;
   }
 
   .sm\:flex {
     display: flex;
   }
 
-  .sm\:h-\[70\%\] {
-    height: 70%;
-  }
-
-  .sm\:h-\[60\%\] {
-    height: 60%;
-  }
-
-  .sm\:h-\[50\%\] {
-    height: 50%;
-  }
-
-  .sm\:h-\[90\%\] {
-    height: 90%;
-  }
-
-  .sm\:h-\[75\%\] {
-    height: 75%;
-  }
-
-  .sm\:h-\[80\%\] {
-    height: 80%;
-  }
-
-  .sm\:h-\[65\%\] {
-    height: 65%;
-  }
-
-  .sm\:h-\[30\%\] {
-    height: 30%;
-  }
-
-  .sm\:h-\[35\%\] {
-    height: 35%;
-  }
-
-  .sm\:h-\[40\%\] {
-    height: 40%;
+  .sm\:h-\[100\%\] {
+    height: 100%;
   }
 
   .sm\:h-\[45\%\] {
     height: 45%;
   }
 
-  .sm\:h-\[100\%\] {
-    height: 100%;
+  .sm\:h-\[60\%\] {
+    height: 60%;
   }
 
-  .sm\:w-\[70\%\] {
-    width: 70%;
+  .sm\:h-\[95\%\] {
+    height: 95%;
   }
 
-  .sm\:w-auto {
-    width: auto;
+  .sm\:min-h-screen {
+    min-height: 100vh;
   }
 
   .sm\:w-56 {
     width: 14rem;
   }
 
-  .sm\:w-\[80\%\] {
-    width: 80%;
+  .sm\:w-72 {
+    width: 18rem;
+  }
+
+  .sm\:w-\[420px\] {
+    width: 420px;
+  }
+
+  .sm\:w-\[70\%\] {
+    width: 70%;
   }
 
   .sm\:w-\[90\%\] {
@@ -1683,22 +1476,6 @@ video {
 
   .sm\:w-\[95\%\] {
     width: 95%;
-  }
-
-  .sm\:w-\[100\%\] {
-    width: 100%;
-  }
-
-  .sm\:w-\[85\%\] {
-    width: 85%;
-  }
-
-  .sm\:w-\[40\%\] {
-    width: 40%;
-  }
-
-  .sm\:w-\[75\%\] {
-    width: 75%;
   }
 
   .sm\:grid-cols-2 {
@@ -1713,10 +1490,6 @@ video {
     flex-direction: row;
   }
 
-  .sm\:flex-wrap {
-    flex-wrap: wrap;
-  }
-
   .sm\:items-center {
     align-items: center;
   }
@@ -1729,32 +1502,37 @@ video {
     justify-content: space-between;
   }
 
+  .sm\:bg-cover {
+    background-size: cover;
+  }
+
+  .sm\:bg-center {
+    background-position: center;
+  }
+
+  .sm\:p-4 {
+    padding: 1rem;
+  }
+
+  .sm\:p-6 {
+    padding: 1.5rem;
+  }
+
   .sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
 
-  .sm\:pl-20 {
-    padding-left: 5rem;
+  .sm\:pr-3 {
+    padding-right: 0.75rem;
   }
 
   .sm\:text-left {
     text-align: left;
   }
 
-  .sm\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
-  .sm\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
-
-  .sm\:text-sm {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
+  .sm\:font-sans {
+    font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   }
 
   .sm\:text-2xl {
@@ -1762,13 +1540,32 @@ video {
     line-height: 2rem;
   }
 
-  .sm\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
+  .sm\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .sm\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+
+  .sm\:text-\[40px\] {
+    font-size: 40px;
+  }
+
+  .sm\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 
   .sm\:text-lg {
     font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .sm\:text-xl {
+    font-size: 1.25rem;
     line-height: 1.75rem;
   }
 }
@@ -1778,71 +1575,166 @@ video {
     grid-column: span 4 / span 4;
   }
 
-  .md\:mt-80 {
-    margin-top: 20rem;
-  }
-
-  .md\:flex {
-    display: flex;
-  }
-
   .md\:hidden {
     display: none;
-  }
-
-  .md\:w-64 {
-    width: 16rem;
   }
 
   .md\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
-
-  .md\:flex-wrap {
-    flex-wrap: wrap;
-  }
-
-  .md\:pl-6 {
-    padding-left: 1.5rem;
-  }
-
-  .md\:text-7xl {
-    font-size: 4.5rem;
-    line-height: 1;
-  }
 }
 
 @media (min-width: 1024px) {
+  .lg\:relative {
+    position: relative;
+  }
+
+  .lg\:left-16 {
+    left: 4rem;
+  }
+
+  .lg\:right-10 {
+    right: 2.5rem;
+  }
+
+  .lg\:top-\[-60px\] {
+    top: -60px;
+  }
+
+  .lg\:right-5 {
+    right: 1.25rem;
+  }
+
+  .lg\:top-14 {
+    top: 3.5rem;
+  }
+
+  .lg\:top-64 {
+    top: 16rem;
+  }
+
+  .lg\:left-5 {
+    left: 1.25rem;
+  }
+
+  .lg\:left-12 {
+    left: 3rem;
+  }
+
+  .lg\:top-\[268px\] {
+    top: 268px;
+  }
+
+  .lg\:left-44 {
+    left: 11rem;
+  }
+
+  .lg\:top-72 {
+    top: 18rem;
+  }
+
+  .lg\:left-8 {
+    left: 2rem;
+  }
+
+  .lg\:top-\[-65px\] {
+    top: -65px;
+  }
+
+  .lg\:top-\[-50px\] {
+    top: -50px;
+  }
+
+  .lg\:top-\[-40px\] {
+    top: -40px;
+  }
+
+  .lg\:top-\[-4px\] {
+    top: -4px;
+  }
+
+  .lg\:top-\[4px\] {
+    top: 4px;
+  }
+
+  .lg\:left-11 {
+    left: 2.75rem;
+  }
+
   .lg\:col-span-2 {
     grid-column: span 2 / span 2;
-  }
-
-  .lg\:mt-\[-70px\] {
-    margin-top: -70px;
-  }
-
-  .lg\:mt-\[10rem\] {
-    margin-top: 10rem;
-  }
-
-  .lg\:flex {
-    display: flex;
   }
 
   .lg\:h-96 {
     height: 24rem;
   }
 
+  .lg\:h-1\/2 {
+    height: 50%;
+  }
+
+  .lg\:h-\[100\%\] {
+    height: 100%;
+  }
+
+  .lg\:h-\[80\%\] {
+    height: 80%;
+  }
+
+  .lg\:h-\[600px\] {
+    height: 600px;
+  }
+
+  .lg\:h-\[400px\] {
+    height: 400px;
+  }
+
+  .lg\:h-\[500px\] {
+    height: 500px;
+  }
+
+  .lg\:h-\[420px\] {
+    height: 420px;
+  }
+
+  .lg\:h-\[450px\] {
+    height: 450px;
+  }
+
+  .lg\:h-\[480px\] {
+    height: 480px;
+  }
+
+  .lg\:h-\[490px\] {
+    height: 490px;
+  }
+
+  .lg\:h-\[65\%\] {
+    height: 65%;
+  }
+
+  .lg\:h-\[70\%\] {
+    height: 70%;
+  }
+
+  .lg\:h-\[68\%\] {
+    height: 68%;
+  }
+
   .lg\:w-\[100\%\] {
     width: 100%;
   }
 
-  .lg\:grid-cols-6 {
-    grid-template-columns: repeat(6, minmax(0, 1fr));
+  .lg\:w-72 {
+    width: 18rem;
   }
 
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-6 {
+    grid-template-columns: repeat(6, minmax(0, 1fr));
   }
 
   .lg\:flex-col {
@@ -1853,9 +1745,8 @@ video {
     align-items: flex-start;
   }
 
-  .lg\:px-20 {
-    padding-left: 5rem;
-    padding-right: 5rem;
+  .lg\:p-4 {
+    padding: 1rem;
   }
 
   .lg\:px-8 {
@@ -1863,27 +1754,22 @@ video {
     padding-right: 2rem;
   }
 
-  .lg\:pl-64 {
-    padding-left: 16rem;
-  }
-}
-
-@media (min-width: 1280px) {
-  .xl\:mt-72 {
-    margin-top: 18rem;
+  .lg\:text-left {
+    text-align: left;
   }
 
-  .xl\:flex {
-    display: flex;
+  .lg\:font-sans {
+    font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   }
 
-  .xl\:justify-start {
-    justify-content: flex-start;
-  }
-
-  .xl\:text-5xl {
-    font-size: 3rem;
+  .lg\:text-7xl {
+    font-size: 4.5rem;
     line-height: 1;
+  }
+
+  .lg\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
 
